Fixed buttons breaking on safari.

--- a/style.css
+++ b/style.css
@@ -73,6 +73,7 @@ video {
         background-color: #ee6e73;
         font-size: 1.5625em;
         font-family: "Times New Roman", serif;
+        -webkit-appearance: none;
     }
 
     .rButton:hover {
@@ -108,6 +109,7 @@ video {
         background-color: #ee6e73;
         font-size: 1em;
         font-family: "Times New Roman", serif;
+        -webkit-appearance: none;
     }
 
     .rButton:hover {
